добавлен класс Alphabet, составляющий алфавит символов заданного текста

--- a/DataReduction/MainForm.resx
+++ b/DataReduction/MainForm.resx
@@ -123,6 +123,25 @@
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>132, 17</value>
   </metadata>
+  <data name="rtbIncoming.Text" xml:space="preserve">
+    <value>Белый снег, серый лед на расстрескавшейся земле
+Одеялом лоскутным. На ней город в дорожной петле.
+А над городом плывут облака, закрывая небесный свет.
+А над городом желтый дым. Городу две тысячи лет,
+Прожитых под светом звезды по имени Солнце...
+
+И две тысячи лет война, война без особых причин.
+Война - дело молодых, лекарство против морщин.
+Красная красная кровь, через час уже просто земля,
+Через два на ней цветы и трава, через три она снова жива
+И согрета лучами звезды по имени Солнце...
+
+И мы знаем, что так было всегда, что судьбою больше любим,
+Кто живет по законам другим и кому умирать молодым.
+Он не знает слова да и слова нет. Он не помнит ни чинов ни имен.
+И способен дотянуться до звезд, не считая, что это сон.
+И упасть опаленым звездой по имени Солнце...</value>
+  </data>
   <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>248, 17</value>
   </metadata>
