--- a/DataReduction/MainForm.resx
+++ b/DataReduction/MainForm.resx
@@ -142,7 +142,7 @@
 И способен дотянуться до звезд, не считая, что это сон.
 И упасть опаленым звездой по имени Солнце...</value>
   </data>
-  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="ofdTextFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>248, 17</value>
   </metadata>
 </root>
